--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "dev": "bun --watch src/index.ts",
     "start": "NODE_ENV=production bun src/index.ts",
     "lint": "bun x eslint",
-    "lint:fix": "bun lint --fix",
-    "prepare": "husky"
+    "lint:fix": "bun lint --fix"
   },
   "dependencies": {
     "@gramio/prompt": "^1.1.4",
